cmake_minimum_required(VERSION 3.9)
project(SDL_first)

set(CMAKE_CXX_STANDARD 11)
include_directories(lib/)

add_executable(SDL_first main.cpp)

INCLUDE(FindPkgConfig)

pkg_check_modules(SDL2_TTF REQUIRED SDL2_ttf)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES})